# search_vacancies_with_database

./: .flake8  .gitignore  README.md  pyproject.toml
src/: main.py
src/api/: __init__.py  hh_api.py
src/database/: db_creator.py  db_manager.py
src/utils/: __init__.py  config.py
src/utils_local/: config.py
